Adjust for using appsettings with sql connection string

--- a/GestaoProdutos/src/Infra/GestaoProdutos.Infra.Migration/appsettings.json
+++ b/GestaoProdutos/src/Infra/GestaoProdutos.Infra.Migration/appsettings.json
@@ -7,6 +7,6 @@
         }
     },
     "ConnectionStrings": {
-        "GestaoProdutosDB": "Server=localhost,1433;Initial Catalog=GestaoProdutosDB;User Id=sa;Password=YourStrongPassword123;"
+        "GestaoProdutosDB": "Server=localhost;Database=GestaoProdutosDB;Trusted_Connection=True;"
     }
 }
