--- a/GestaoProdutos/src/CrossCutting/GestaoProdutos.CrossCutting.Exceptions/GestaoProdutos.CrossCutting.Exceptions.csproj
+++ b/GestaoProdutos/src/CrossCutting/GestaoProdutos.CrossCutting.Exceptions/GestaoProdutos.CrossCutting.Exceptions.csproj
@@ -4,10 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>GestaoProdutos.CrossCutting.Commons</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    </ItemGroup>
 
 </Project>
