--- a/GestaoProdutos/src/Infra/GestaoProdutos.Infra.Database/GestaoProdutos.Infra.Database.csproj
+++ b/GestaoProdutos/src/Infra/GestaoProdutos.Infra.Database/GestaoProdutos.Infra.Database.csproj
@@ -8,6 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.143" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
