--- a/GestaoProdutos/src/Presenter/GestaoProdutos.Presenter.Api/appsettings.json
+++ b/GestaoProdutos/src/Presenter/GestaoProdutos.Presenter.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GestaoProdutosDB": "Server=localhost;Database=GestaoProdutosDB;Trusted_Connection=True;"
+  }
 }
